# 2eBachelor

./: .gitignore  Opdracht_01_01.txt  README.md  test.txt
A&D/Les 3 - linVSsent/: linVsSent.py
A&D/Les 4 - Bubblesort/: monitor.py
A&D/Les 4 - Shakersort/: main.py
FUNPR/Exercises/: Collector.rkt
FUNPR/Exercises/Les 1 - H1,2,3/: FirstOfThree.rkt  Untitled.rkt  basisfun.scm  mystery.rkt  whatIsIt.rkt
FUNPR/Exercises/Les 2 - H4,5,6/: Les 2 - H6 - evalbool.rkt  Les2-H5.rkt~
FUNPR/Practicum/: PracticumNTINF-07-12-Maties&Rune.xlsx
Semester 1/: Backlog.xlsx  ~$Backlog.xlsx
Semester 1/A&D/Les 2 - Fibonacci/: FibTest.py  main.py
Semester 1/A&D/Les 3 - MTF&Trans/: main.py
Semester 1/A&D/Les 4 - Bubblesort/: main.py
Semester 1/A&D/Les 4 - Selection Sort/: main.py
Semester 1/A&D/Les 4 - for1,1/: for11.py
Semester 1/A&D/Les 5 - Quicksort/: main.py
Semester 1/A&D/Les 5 - quickVSinsert/: main.py
Semester 1/OGP2/Exercises/: Opdracht_01_02.txt
Semester 1/WEBPR/Project/: accessibility.html  account.html  addKermis.html  addRoom.html  booking.html  home.html  login.html  notifications.html  reserveer.html
Semester 1/WEBPR/examenvoorbereidingen/: Les1.html  Les2.html
Semester 2/COMGR/: Canoe-Peddling.mov  Fly-by.mov  Showcase.mov
Semester 2/COMGR/Les1/Oefening1/: CG1_ActiveEdgeTable.cpp  CG1_ActiveEdgeTable.h  CG1_Canvas.cpp  CG1_DrawTool.cpp  CG1_DrawTool.h  CG1_EdgeTable.h  CMakeLists.txt  Oefening1.pro  cg1oefeningen.cpp  cg1oefeningen.h  main.cpp
Semester 2/COMGR/OpenGL_Planets/src/: CMakeLists.txt  planetsview.h  util.h
Semester 2/DELEK/: Sine1000pt.h
Semester 2/HSAI/IOU/: settings.gradle
Semester 2/PSOPV/EersteTestProject/: typescriptApp.ts
WEBPR/: accounts.txt
WEBPR/Project/: addRoom.html  login.html  login.php  notifications.html
WEBPR/Project 2.0 /: accessibility.php  account.php  admin.php  booking.php  chat.php  edit.php  home.php  login.php  management.php  message.php  notifications.php  profile.php  rating.php
WEBPR/Project/php/: login.php  (+1 more)
(+323 files in other folders)
